--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,3 +12,31 @@ header h1 {
   justify-content: center;
   align-items: center;
 }
+
+#buttons {
+  display: flex;
+  flex-direction: column;
+}
+
+#buttons li {
+  margin-bottom: 5px;
+  float: left;
+  list-style: none;
+  text-align: center;
+  background-color: blue;
+  margin-right: 30px;
+  width: 150px;
+  line-height: 60px;
+}
+
+#buttons li a {
+  text-decoration: none;
+  color: #ffffff;
+  display: block;
+}
+
+#buttons li a:hover {
+  text-decoration: none;
+  color: #000000;
+  background-color: #33b5e5;
+}
