--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,12 +6,12 @@ header h1 {
   text-align: center;
 }
 
-.box {
+/* .box {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
+} */
 
 #buttons {
   display: flex;
@@ -41,4 +41,48 @@ header h1 {
   background-color: #33b5e5;
 }
 
+#start {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* For the result page */
+.box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 80px auto;
+  text-align: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 60vw;
+  background-color: #f0ead6;
+}
+
+input {
+  width: 80%;
+  padding: 12px 20px;
+  margin: 8px 20px;
+  box-sizing: border-box;
+  font-size: 18px;
+}
+
+input:focus {
+  outline: none;
+}
+
+#navBtns {
+  display: flex;
+  flex-direction: row;
+}
+
+.goBack {
+  display: inline;
+  margin-left: auto;
+}
+
+.clear {
+  display: inline;
+}
